package music.harmony;

import music.notes.pitch.PitchInterval;

public interface HarmonyRelation {
    PitchInterval[] getIntervals();
}
